# Mobiles_shop_backend

./: .env.example  .gitignore  Dockerfile  compose.yml  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
auth/: jwt_utils.py
auth/utils/: hashing_password.py
models/: database.py  models.py
models/schemas/: favorite_schema.py  product_schema.py  user_schema.py
routers/: db_session.py  product_router.py  user_router.py
services/: product_service.py  user_service.py
src/: settings.py
src/auth/: hashing_password.py  jwt.py
src/database/: connection.py  database.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: d4234515706c_add_column_in_products_table_file_path.py
src/database/repositories/: products.py  users.py
src/routers/: admin.py  product.py  products.py  user.py  users.py
src/schemas/: product.py  products.py  token.py  user.py  users.py
src/services/: admin.py  product.py  products.py  user.py  users.py
